artists/style-page-letter.css
.controls__letters, .controls__title, .controls__search {
	flex-grow: 1;
}
.controls__control {
	display: inline-block;
}
.controls__container {
	flex-wrap: wrap;
}

.list__item {
	clear: both;
	flex-basis: 400px;
	flex-grow: 1;
}
.list__item:nth-of-type(2) {
	border-top: none;
	padding-top: 0;
}
.list__visual {
	flex: none;
	height: auto;
	margin-right: 1rem;
	max-height: 200px;
	overflow: hidden;
	width: 150px;
}
.list--no-image {
	border: 1px solid;
	color: hsl(var(--background--bold));
	padding: 1rem;
	text-align: center;
}
.list--no-image::before {
	content: "NO IMAGE";
	display: block;
	height: 1rem;
	position: relative;
	top: calc(50% - 0.5rem);
}
.list__image {
	height: auto;
	min-height: 80px;
	object-fit: cover;
	opacity: 1;
	width: 100%;
}
.list__details {
	flex-wrap: wrap;
}
@media(min-width: 1200px) {
	.list__item:nth-of-type(odd) .list__details {
		padding-right: 1rem;
	}
}
.list__pronunciation {
	line-height: 1.5rem;
	margin-left: auto;
	text-align: right;
	word-break: break-all;
	z-index: 2;
}
.list__description:not(:empty), .list__tags:not(:empty) {
	margin-top: 1rem;
	width: 100%;
}
.list__tag::after {
	content: ",";
}
.list__tag:last-of-type::after {
	display: none;
}
.list__tag + .list__tag::before {
	display: none;
}
.list__activity::after {
	background: hsl(0, 0%, 70%);
	border-radius: 50%;
	content: "";
	display: inline-block;
	height: 10px;
	left: calc(-1rem - 10px - 0.5rem);
	position: absolute;
	top: 0.5rem;
	vertical-align: baseline;
	width: 10px;
}
.list--active::after {
	background: hsl(100, 50%, 60%);
}
.list--inactive::after {
	background: hsl(0, 60%, 70%);
}

